syntax = "proto3";
package auth;

option go_package = "github.com/kucingscript/go-grpc-ecommerce-be/pb/auth";

import "common/base_response.proto";
import "buf/validate/validate.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc Logout (LogoutRequest) returns (LogoutResponse);
}

message RegisterRequest {
  string full_name = 1 [(buf.validate.field).string = {min_len: 1, max_len: 255}];
  string email = 2 [(buf.validate.field).string = {email: true}];
  string password = 3 [(buf.validate.field).string = {min_len: 8, max_len: 255}];
  string password_confirmation = 4 [(buf.validate.field).string = {min_len: 8, max_len: 255}]; 
}

message RegisterResponse {
  common.BaseResponse base_response = 1;
}

message LoginRequest {
  string email = 2 [(buf.validate.field).string = {email: true, min_len: 1, max_len: 255}];
  string password = 3 [(buf.validate.field).string = {min_len: 8, max_len: 255}];
}

message LoginResponse {
  common.BaseResponse base_response = 1;
  string access_token = 2;
}

message LogoutRequest {}

message LogoutResponse {
  common.BaseResponse base_response = 1;
}
